2013-01-04  Steve Langasek  <steve.langasek@ubuntu.com

	* extra/upstart-local-bridge.c: use SOCKET_PATH in our event
	  environment, instead of clobbering PATH.  (LP: #1235480)

2013-10-04  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-local-bridge.c:
	  - socket_reader():
	    - Handle event emission in new function emit_event().
	    - Check that data is printable.
	    - Allow input to be a set of pairs (LP: #1234898).

2013-10-03  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_utmp.c: Update remaining tests to pause
	  between writing utmp(x) records and reading them back to allow
	  tests to detect whether the expected new records have replaced
	  the artificially created original ones (LP: #1089159).

2013-10-02  James Hunt  <james.hunt@ubuntu.com>

	* test/test_util_common.c:
	  - set_upstart_session(): Call get_initctl_binary() rather than using
	    define value.
	  - get_initctl(): As above.
	  - get_initctl_binary(): Check that file exists for parity with
	    get_upstart_binary().

2013-10-01  James Hunt  <james.hunt@ubuntu.com>

	* extra/upstart-file-bridge.c:
	  - upstart_job_added(): Make quieter in manner consistent with
	    the other bridges (only display output in debug mode).
	  - upstart_job_removed(): As above.

2013-09-26  James Hunt  <james.hunt@ubuntu.com>

	* init/event.c: event_pending_handle_jobs(): Don't re-iterate job classes
	  unless quiescing.

2013-09-26  James Hunt  <james.hunt@ubuntu.com>

	* init/event.c: event_pending_handle_jobs(): Force quiesce when all job
	  instances have finished to speed session shutdown.
	* init/job_process.c: job_process_jobs_running(): Only consider job
	  instances with associated pids to avoid abstract jobs confusing the
	  shutdown.
	* init/quiesce.c:
	  - quiesce(): Optimise session shutdown 
	    - Skip wait phase if no jobs care about the 'session-end' event
	      (LP: #1227212).
	    - Stop already running instances if other jobs care about